# deeplearning_vis

./: .gitignore  README.md  config.py  experiments.md  hello.py  instructions.md  pyproject.toml  smoke_test_trainer.py  test.py  test_resnet18.py  test_yourCNN.py  test_yourVIT.py  train.py  train_resnet18.py  train_yourCNN.py  train_yourVIT.py
assignment_1_code/: metrics.py  trainer.py  wandb_logger.py
assignment_1_code/models/: class_model.py  cnn.py  vit.py
assignments/: general.md
assignments/assignment_0/: instructions.md
assignments/assignment_1/: config.py  test.py  train.py  viz.py
assignments/assignment_1/assignment_1_code/: metrics.py  trainer.py  viz.py
assignments/assignment_1/assignment_1_code/datasets/: cifar10.py
assignments/assignment_1/assignment_1_code/models/: class_model.py
