[project]
name = "deeplearning-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.66.0",
    "wandb>=0.18.0",
]


[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/rocm6.3"]
